se agrego mi foto y se pusieron los textos estaticos

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <header>
         <div class="Barra-de-navegacion">
-            <h1>
-                <img src="Logo.png" height="30" width="140">
-            </h1>
+            <img src="https://lh3.googleusercontent.com/rK-KtI2eyKMk0St5H8PIQWCvFhVvbuFZgMCCSFED17RBxPaubuSkiXgnrNHcjHQVTX7Gnr7YF7BqyNQCtoPBLocUoRCcsZgly2b_dI9ek3oPN7dvdjoYQ4QKI9eNQ-gt9U9fEp7MupIorF-mVPpuvpy1a3LJn_MI6tcUirbw7BgEQOGw0sj3KdVgALnfqW29IS8sGLdhcmeOWOVIvx_v7JvipNObx0OzTKqI93BjTJZy3gcTxCgL4jrv1441Y3aAwWo1hyWoqDR1HRi5Zd3W-psUHp6kXtKkSCcmoNUJAidDn2jpl8Zyz5p2e3iMO7aCbxRSfmTkAJN2Je9TgbmEBKznB6RQnCU2cJJbAEaNDoKvDzj1ClQlHBOmc9rA_5dUzEvDs4_VDkazO6td2A5AeIZrSV4BFjDfLLiDy7cRLbyARkAEuHlQtHKX-oG9bbhSULH-8Onyh9OCgj94zucFa2A8qsYe_SK2laQHl2roGyP39X7B1OHd_WUpqqV2swq65ZnIHjpNajsTtam9XiSukOssR5YJx7fFiLNcYwAlZbWpDmO7MC5OXEadUN1DNYURC7cSaL5Z4v7-SPnlzmK5X5B2I9gfQhAAbDad30YyQEAEGLfMPixHmTL_0P0aHmLUhVvoDQe9xm4Ff5T87TPCv8xjAiMPyvZwgUoHfqCD9nqF-BUko6_zu8CjTL5UCbAWSG4RtezIycSlT6jJSqCVkOBpSw5Xi_DS-EbOg9Mdk9_bZPje0idKIp094ZARwSnhyMFn9-XI7W8O2Hf6CFbCkUiY2h6P3ZYqOYgV=w412-h87-no?authuser=1" height="30" width="140" alt="Logo">
+            <h1>Hoja de vida andres</h1>
             <nav>
                 <ul>
                    <li><a>Seccion 1</a></li>
@@ -24,7 +23,12 @@
         </div>
     </header>
     <main>
-        <aside class="Informacion"></aside>
+        <aside class="Informacion">
+            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFzed1MWx_fWw/profile-displayphoto-shrink_800_800/0/1649458085695?e=1669248000&v=beta&t=AC9Gz6XMQV-SnR_rcvcWTRN9YHJeOaRgGdrvoYoDosk" alt="Foto de perfil" height="150" width="150" draggable="false">
+            <h1>Andres Felipe Idarrga Zabala</h1>
+            <h2>Redes sociales</h2>
+            <a href="https://www.linkedin.com/in/andresidarragaz/" >linkedin</a>
+        </aside>
         <section class="Contenido-principal"></section>
     </main>
     <footer></footer>
