--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
     <title>Hoja de vida</title>
 </head>
 <body>
     <header>
         <div class="Barra-de-navegacion">
-            <img src="https://lh3.googleusercontent.com/rK-KtI2eyKMk0St5H8PIQWCvFhVvbuFZgMCCSFED17RBxPaubuSkiXgnrNHcjHQVTX7Gnr7YF7BqyNQCtoPBLocUoRCcsZgly2b_dI9ek3oPN7dvdjoYQ4QKI9eNQ-gt9U9fEp7MupIorF-mVPpuvpy1a3LJn_MI6tcUirbw7BgEQOGw0sj3KdVgALnfqW29IS8sGLdhcmeOWOVIvx_v7JvipNObx0OzTKqI93BjTJZy3gcTxCgL4jrv1441Y3aAwWo1hyWoqDR1HRi5Zd3W-psUHp6kXtKkSCcmoNUJAidDn2jpl8Zyz5p2e3iMO7aCbxRSfmTkAJN2Je9TgbmEBKznB6RQnCU2cJJbAEaNDoKvDzj1ClQlHBOmc9rA_5dUzEvDs4_VDkazO6td2A5AeIZrSV4BFjDfLLiDy7cRLbyARkAEuHlQtHKX-oG9bbhSULH-8Onyh9OCgj94zucFa2A8qsYe_SK2laQHl2roGyP39X7B1OHd_WUpqqV2swq65ZnIHjpNajsTtam9XiSukOssR5YJx7fFiLNcYwAlZbWpDmO7MC5OXEadUN1DNYURC7cSaL5Z4v7-SPnlzmK5X5B2I9gfQhAAbDad30YyQEAEGLfMPixHmTL_0P0aHmLUhVvoDQe9xm4Ff5T87TPCv8xjAiMPyvZwgUoHfqCD9nqF-BUko6_zu8CjTL5UCbAWSG4RtezIycSlT6jJSqCVkOBpSw5Xi_DS-EbOg9Mdk9_bZPje0idKIp094ZARwSnhyMFn9-XI7W8O2Hf6CFbCkUiY2h6P3ZYqOYgV=w412-h87-no?authuser=1" height="30" width="140" alt="Logo">
-            <h1>Hoja de vida andres</h1>
+            <img src="https://i.postimg.cc/wjstSjWS/Logo.png" height="30" width="140" alt="Logo">
+            <h1>Hoja de vida</h1>
             <nav>
                 <ul>
-                   <li><a>Seccion 1</a></li>
-                   <li><a>Seccion 2</a></li>
-                   <li><a>Seccion 3</a></li>
-                   <li><a>Seccion 4</a></li>
+                   <li><a href="#presentacion">Presentación</a></li>
+                   <li><a href="#experiencia">Experiencia académica</a></li>
+                   <li><a href="#tabla">Habilidades</a></li>
+                   <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -26,25 +29,35 @@
         <!--Comentario-->
         <aside class="Informacion">
             <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFzed1MWx_fWw/profile-displayphoto-shrink_800_800/0/1649458085695?e=1669248000&v=beta&t=AC9Gz6XMQV-SnR_rcvcWTRN9YHJeOaRgGdrvoYoDosk" alt="Foto de perfil" height="150" width="150" draggable="false">
-            <h1>Andres Felipe Idarrga Zabala</h1>
+            <h1>Andres Felipe Idarraga Zabala</h1>
+            <article>Soy un estudiante entusiasmado e interesado en crecer profesionalmente y busco un puesto donde pueda practicar y mejorar mis habilidades. Tengo conocimientos en varios lenguajes de programación con los que he realizado pequeños proyectos personales. Me apasiona seguir adquiriendo conocimiento en el área, por lo que constantemente tomo cursos y me informo sobre temas científicos de impacto de la actualidad</article>
             <h2>Redes sociales</h2>
-            <a href="https://www.linkedin.com/in/andresidarragaz/" >linkedin</a>
+            <a id="link" href="https://www.linkedin.com/in/andresidarragaz/" >linkedin</a>
         </aside>
         <section class="Contenido-principal" id="Contenido"></section>
-        <form class="Contacto">
+        <form class="Contacto" id="contacto">
             <h1>Contacto</h1>
-            <label for="nombreApellido" >Nombre y apellido</label>
-            <input type="text" id="nombreApellido" class="inputText" required>
+            <label for="asunto" >Asunto</label>
+            <input type="text" id="asunto" class="inputText" required>
             <label for="correoElectronico">Correo Electronico</label>
             <input type="email" id="correoElectronico" class="inputText" required placeholder="Email@dominio.com">
-            <label for="telefono">Numero de teléfono</label>
-            <input type="tel" id="telefono" class="inputText" required placeholder="+XX XXXXXXXXXX">
             <label for="mensaje">Mensaje</label>
             <textarea id="mensaje" class="inputText" cols="139" rows="10" ></textarea>
             <input type="submit" value="Enviar Correo" class="subir" id="subir">
         </form>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="InformaciondeContacto">
+            <span>© Andres Idarraga</span>
+            <span>Correo: Idarragazabala2013@gmail.com</span>
+            <span>Numero de telefono: 3022489359</span>
+            <span>Santa Marta, Magdalena 2022</span>
+            <div class="imagenesfooter">
+                <a href="https://www.linkedin.com/in/andresidarragaz/"><img src="https://cdn-icons-png.flaticon.com/128/174/174857.png" alt="Logo de linkedin" height="50px" width="50px"></a>
+                <a href="https://github.com/Andres-brek"><img src="https://cdn-icons-png.flaticon.com/512/38/38401.png" height="50px" width="50px"></a>
+            </div>
+        </div>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
