se hicieron cambios menores de ortografia

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <aside class="Informacion">
             <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFzed1MWx_fWw/profile-displayphoto-shrink_800_800/0/1649458085695?e=1669248000&v=beta&t=AC9Gz6XMQV-SnR_rcvcWTRN9YHJeOaRgGdrvoYoDosk" alt="Foto de perfil" height="150" width="150" draggable="false">
             <h1>Andres Felipe Idarraga Zabala</h1>
-            <article>Soy un estudiante entusiasmado e interesado en crecer profesionalmente y busco un puesto donde pueda practicar y mejorar mis habilidades. Tengo conocimientos en varios lenguajes de programación con los que he realizado pequeños proyectos personales. Me apasiona seguir adquiriendo conocimiento en el área, por lo que constantemente tomo cursos y me informo sobre temas científicos de impacto de la actualidad</article>
+            <article>Soy un estudiante entusiasmado e interesado en crecer profesionalmente y busco un puesto donde pueda practicar y mejorar mis habilidades. Tengo conocimientos en varios lenguajes de programación con los que he realizado pequeños proyectos personales. Me apasiona seguir adquiriendo conocimiento en el área, por lo que constantemente tomo cursos y me informo sobre temas científicos de impacto de la actualidad.</article>
             <h2>Redes sociales</h2>
             <a id="link" href="https://www.linkedin.com/in/andresidarragaz/" >linkedin</a>
         </aside>
@@ -53,8 +53,8 @@
             <span>Numero de telefono: 3022489359</span>
             <span>Santa Marta, Magdalena 2022</span>
             <div class="imagenesfooter">
-                <a href="https://www.linkedin.com/in/andresidarragaz/"><img src="https://cdn-icons-png.flaticon.com/128/174/174857.png" alt="Logo de linkedin" height="50px" width="50px"></a>
-                <a href="https://github.com/Andres-brek"><img src="https://cdn-icons-png.flaticon.com/512/38/38401.png" height="50px" width="50px"></a>
+                <a href="https://www.linkedin.com/in/andresidarragaz/"><img src="https://cdn-icons-png.flaticon.com/128/174/174857.png" alt="Logo de linkedin" height="25px" width="25px"></a>
+                <a href="https://github.com/Andres-brek"><img src="https://cdn-icons-png.flaticon.com/512/38/38401.png" height="25px" width="25px"></a>
             </div>
         </div>
     </footer>
